# Smart-File-Organizer

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/classifiers/: __init__.py  base.py  code_classifier.py  custom_classifier.py  document_classifier.py  factory.py  image_classifier.py  video_classifier.py
src/core/: __init__.py  mover.py  organizer.py  scanner.py
src/ui/: __init__.py  main_window.py  styles.py  widgets.py  worker.py
